# tensorflow-quicksheet

./: README.md  pyproject.toml
src/rnn/: __init__.py  model.py
src/wordvec/: __init__.py  model.py  tokeniser.py  train.py
tensorflow_quicksheet/: __init__.py  rnn.py
